Fixes bug on mobile where navigation button is too wide

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -28,7 +28,7 @@ h2.banner-text {
 	text-align: justify;
 }
 
-button {
+.action {
 	margin: 1.5em 0;
 	width: 100%;
 	height: 3.5em;
